[Fix] map clipping over searchbar

--- a/src/compnents/NavbarComponent/Navbar.module.scss
+++ b/src/compnents/NavbarComponent/Navbar.module.scss
@@ -36,7 +36,7 @@
 .logo {
   font-size: 2rem;
   font-weight: 800;
-  color: #fff;
+  color: $foreground-color-1;
   text-decoration: none;
 }
 
