--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,5 @@
 
-  html,
-  body {
+  html, body {
     max-width: 100vw;
     overflow-x: hidden;
     background-color: $background-color;
